--- a/link.css
+++ b/link.css
@@ -1,4 +1,6 @@
-body {
+ 
+ /*body styling*/
+ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -13,9 +15,9 @@ body {
 
 /* Header Styles */
 .header {
-    background-color: #0053A0;
+    background-color: #073b6b;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 10px;
 }
 
 .header-top {
@@ -30,13 +32,13 @@ body {
 
 .header-links a, .header-icons a {
     color: white;
-    margin-right: 15px;
+    margin-right: 20px;
     text-decoration: none;
     font-size: 14px;
 }
 
 .header-icons a {
-    font-size: 16px;
+    font-size: 20px;
 
 }
 
@@ -44,7 +46,7 @@ body {
 .navbar {
     background-color: white;
     padding: 10px 20px;
-    border-bottom: 2px solid #ddd;
+    border-bottom: 2px solid #052c99;
 }
 
 .nav-list {
@@ -58,21 +60,26 @@ body {
     margin-right: 20px;
     position: relative;
 }
-
+.logo nav img {
+  height: 50px;
+}
 .nav-list a {
     text-decoration: none;
     color: black;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 15px;
+    
 }
 
 .nav-list .btn-apply {
-    border: 2px solid #0053A0;
+    border: 2px solid #0e4477;
     padding: 5px 10px;
-    color: #0053A0;
+    color: #0e4477;
     text-transform: uppercase;
     font-weight: bold;
     text-align: center;
+}
+.btn-apply:hover{
+  background-color: #0e4477 ;
 }
 
 /* Dropdown Styles */
@@ -110,7 +117,7 @@ body {
   section {
     position:center;
     padding: 20px;
-    height: 100vh; /* For demonstration, each section takes full viewport height */
+    height: 100vh; 
   }
   
   /* Footer Styling */
@@ -177,10 +184,63 @@ body {
 .footer-social a:hover {
     text-decoration: underline;
 }
-  section a{
-    background-image: url("front page.JPG");
-    size-adjust: auto;
-  }
+
+.hero {
+  position: relative;
+  height: 100vh;
+  background-image: url('https://www.monash.edu/__data/assets/image/0009/3817242/varieties/feature.box.jpg'); /* hero styling */
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-align: left;
+}
+
+.hero::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5); /* Adds a dark overlay */
+  z-index: 1;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 2;
+  max-width: 800px;
+  padding: 20px;
+}
+
+.hero h1 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+
+.hero p {
+  font-size: 1.5rem;
+  margin-bottom: 30px;
+}
+
+.cta-button {
+  display: inline-block;
+  padding: 15px 30px;
+  font-size: 1.2rem;
+  color: #fff;
+  background-color: #363a3f; 
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.cta-button:hover {
+  background-color: #2d2f31; 
+}
 
 
   section-e{
